# hw-30-ci

./: .gitignore  database.db  pyproject.toml
.github/actions/poetry/: action.yml
.github/workflows/: main.yml
src/: database.db  database.py  main.py  schemas.py
tests/: test_app.py
